--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -93,10 +93,12 @@
 		<session-timeout>30</session-timeout>
 	</session-config>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>/view/home.jsp</welcome-file>
 	</welcome-file-list>
+	
 	<error-page>
 		<error-code>404</error-code>
 		<location>/common/resource_not_found.jsp</location>
 	</error-page>
+
 </web-app>
